# Nbs2LitematicaEx

./: .gitignore  CMakeLists.txt  Nbs2LitematicaEx.sln  README.md  clang-format.txt  cmake-build.sh
.github/workflows/: build-upload.yml  c-cpp.yml
Dependencies/nbs_cpp/: NBS_All.hpp  NBS_Endian.hpp  NBS_File.hpp  NBS_IO.hpp  NBS_Reader.hpp  NBS_Writer.hpp
Dependencies/nbt_cpp/: NBT_All.hpp  NBT_Helper.hpp  NBT_IO.hpp  NBT_Reader.hpp  NBT_Scanner.hpp  NBT_Type.hpp  NBT_Visitor.hpp  NBT_Writer.hpp
LitematicGenerator/: BlockState.hpp  CMakeLists.txt  LitematicFile.hpp  LitematicGenerator.hpp  LitematicGenerator.vcxproj  LitematicGenerator.vcxproj.filters  MyNote.hpp  main.cpp
Nbs2LitematicEx/: CMakeLists.txt  MyAlgorithm.hpp  Nbs2LitematicEx.vcxproj  Nbs2LitematicEx.vcxproj.filters  OptimalSubstringSelector.hpp  RepetitionPatternFinder.hpp  main.cpp
References/: cmpc2003-deepseek-translate.md  cmpc2003-qwen-translate.md  逻辑红石音乐 - 概述.url
TEST/: CMakeLists.txt  MyAlgorithm.hpp  TEST.cpp  TEST.vcxproj  TEST.vcxproj.filters  main.cpp
